# Langgraph

./: Dockerfile  main.py  pyproject.toml  requirements.txt
src/config/: llm.py
src/routes/: llmroute.py
src/schema/: chatSchema.py
src/services/: basic_chatbot.ipynb  ch-1simplegraph.ipynb  conditional.ipynb  fault_tolerance.ipynb  iterative.ipynb  llmblog.py  llmlanggraph.py  parallel.ipynb  parallel.py  persistence.ipynb  review.ipynb  upscessay.ipynb  upscessayParllel.ipynb
